# Pacer

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: consts.h  display.h  helpers.h  metrics.h  network.h  pacer.h  packet.h  types.h
include/hazard/: effects.h  hazards.h  metrics.h
src/: emulator.cpp  receiver.cpp  sender.cpp
